<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="20dp"
    android:paddingVertical="10dp">
    <TextView
        android:id="@+id/home_text_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_text_4"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/jalnan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/home_text_category_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="카페"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/jalnan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/home_text_4"/>
    <TextView
        android:id="@+id/home_text_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/home_text_5"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/jalnan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/home_text_category_1"/>

    <TextView
        android:id="@+id/home_text_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/home_text_6"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/home_text_4"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/home_text_category_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="카페"
        android:textColor="@color/colorBlack"
        android:textSize="13sp"
        app:layout_constraintTop_toTopOf="@id/home_text_6"
        app:layout_constraintStart_toEndOf="@id/home_text_6"/>

    <TextView
        android:id="@+id/home_text_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/home_text_7"
        android:textSize="13sp"
        app:layout_constraintTop_toTopOf="@id/home_text_6"
        app:layout_constraintStart_toEndOf="@id/home_text_category_2"/>

</androidx.constraintlayout.widget.ConstraintLayout>