<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.StoreDetailReviewFragment">

    <TextView
        android:id="@+id/detail_review_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_review_text1"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="@id/detail_review_guide_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_review_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_review_text2"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/detail_review_guide_2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_review_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/detail_review_text3"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="@id/detail_review_guide_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_review_text1" />

    <TextView
        android:id="@+id/detail_review_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/detail_review_text4"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/detail_review_guide_2"
        app:layout_constraintTop_toBottomOf="@id/detail_review_text2" />

    <TextView
        android:id="@+id/detail_review_text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/detail_review_text5"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="@id/detail_review_guide_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_review_text3" />

    <TextView
        android:id="@+id/detail_review_text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/detail_review_text7"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/detail_review_guide_2"
        app:layout_constraintTop_toBottomOf="@id/detail_review_text4" />

    <TextView
        android:id="@+id/detail_review_text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/detail_review_text7"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="@id/detail_review_guide_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_review_text5" />

    <TextView
        android:id="@+id/detail_review_text8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/detail_review_text8"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/detail_review_guide_2"
        app:layout_constraintTop_toBottomOf="@id/detail_review_text6" />

    <ProgressBar
        android:id="@+id/detail_review_rating_1"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:progress="14"
        app:layout_constraintBottom_toBottomOf="@id/detail_review_text1"
        app:layout_constraintEnd_toEndOf="@id/detail_review_guide_2"
        app:layout_constraintStart_toStartOf="@id/detail_review_guide_1"
        app:layout_constraintTop_toTopOf="@id/detail_review_text1" />

    <ProgressBar
        android:id="@+id/detail_review_rating_2"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:progress="90"
        app:layout_constraintBottom_toBottomOf="@id/detail_review_text3"
        app:layout_constraintEnd_toEndOf="@id/detail_review_guide_2"
        app:layout_constraintStart_toStartOf="@id/detail_review_guide_1"
        app:layout_constraintTop_toTopOf="@id/detail_review_text3" />

    <ProgressBar
        android:id="@+id/detail_review_rating_3"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:progress="12"
        app:layout_constraintBottom_toBottomOf="@id/detail_review_text5"
        app:layout_constraintEnd_toEndOf="@id/detail_review_guide_2"
        app:layout_constraintStart_toStartOf="@id/detail_review_guide_1"
        app:layout_constraintTop_toTopOf="@id/detail_review_text5" />

    <ProgressBar
        android:id="@+id/detail_review_rating_4"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:progress="60"
        app:layout_constraintBottom_toBottomOf="@id/detail_review_text7"
        app:layout_constraintEnd_toEndOf="@id/detail_review_guide_2"
        app:layout_constraintStart_toStartOf="@id/detail_review_guide_1"
        app:layout_constraintTop_toTopOf="@id/detail_review_text7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detail_review_guide_1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detail_review_guide_2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>