<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.SignInActivity">

    <include layout="@layout/activity_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/signin_guide_2"
        app:layout_constraintStart_toStartOf="@id/signin_guide_1"
        app:layout_constraintTop_toBottomOf="@id/signin_guide_3">

        <EditText
            android:id="@+id/signin_phone"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/colorWhite"
            android:fontFamily="@font/jalnan"
            android:hint="@string/signin_phone_number_placeholder"
            android:inputType="phone"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="@id/signin_guide_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/signin_request_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorHomeBlue"
            android:fontFamily="@font/jalnan"
            android:text="@string/signin_send"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/signin_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/signin_guide_4"
            app:layout_constraintTop_toTopOf="@id/signin_phone" />

        <EditText
            android:id="@+id/signin_verification_code"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorWhite"
            android:fontFamily="@font/jalnan"
            android:hint="@string/signin_verification_code_placeholder"
            android:inputType="number"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signin_phone" />

        <Button
            android:id="@+id/signin_verify_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/colorHomeBlue"
            android:fontFamily="@font/jalnan"
            android:text="@string/signin_done"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signin_verification_code" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/signin_guide_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signin_guide_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signin_guide_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signin_guide_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />
</androidx.constraintlayout.widget.ConstraintLayout>