<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@color/colorPrimary">
            <androidx.cardview.widget.CardView
                android:id="@+id/profile_image_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@color/colorWhite" />
                <androidx.cardview.widget.CardView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="100dp">
                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher" />
                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="0dp"
                app:cardCornerRadius="20dp">
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/colorBlack"
            android:text="문현민"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sura981208@gmail.com"
            android:layout_marginStart="20dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            />
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/profile_btn_bookmark"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_margin="15dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/profile_btn_recently"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="@color/colorBlack"
                        android:src="@drawable/ic_favorite_24px"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_text_1"
                        android:textSize="12sp"
                        android:textColor="@color/colorBlack" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="21"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:fontFamily="@font/jalnan"
                        android:textColor="@color/colorBlack"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/profile_btn_recently"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_margin="15dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/profile_btn_bookmark"
                app:layout_constraintEnd_toStartOf="@id/profile_btn_near"
                app:layout_constraintTop_toTopOf="parent"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="@color/colorBlack"
                        android:src="@drawable/ic_location_on_24px"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_text_2"
                        android:textSize="12sp"
                        android:textColor="@color/colorBlack" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:fontFamily="@font/jalnan"
                        android:textColor="@color/colorBlack"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/profile_btn_near"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_margin="15dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/profile_btn_recently"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="@color/colorBlack"
                        android:src="@drawable/ic_share_24px"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_text_3"
                        android:textSize="12sp"
                        android:textColor="@color/colorBlack" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:fontFamily="@font/jalnan"
                        android:textColor="@color/colorBlack"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical|start">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_speaker"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:text="@string/profile_text_4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical|start">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person_profile"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:text="@string/profile_text_5"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical|start">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_version"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:text="@string/profile_text_6"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical|start">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notification"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:text="@string/profile_text_7"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical|start">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:text="@string/profile_text_8"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical|start">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_setting"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:text="@string/profile_text_9"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical|start">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_etc"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:text="@string/profile_text_10"/>
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>